# sqlx-test

./: .gitignore  Cargo.toml  README.md  database.sql
src/: main.rs
src/entities/: language.rs  mod.rs  person.rs  prelude.rs
