[package]
name = "sqlx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde_json = "1.0"
serde = "1.0.188"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
